# grindset

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md
apps/indexer/: Dockerfile  README.md  go.mod
apps/server/: .env.example  Dockerfile  README.md  go.mod  go.sum
apps/web/: .env.example  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.node.json  vitest.config.ts
docs/: 01-concept.md  02-branding.md  03-gameplay.md  04-tokenomics.md  05-combat.md  06-skills.md  07-solana.md  08-backend.md  09-data-model.md  10-anti-bot.md  11-art-pipeline.md  12-roadmap.md  README.md
infra/config/: rate_limits.toml
infra/docker/: docker-compose.yml
infra/fly/: README.md  indexer.fly.toml  server.fly.toml
infra/migrations/: 001_accounts_and_characters.up.sql  002_skills.up.sql  003_items.down.sql  003_items.up.sql  004_grand_exchange.down.sql  004_grand_exchange.up.sql  005_wallet.down.sql  005_wallet.up.sql  006_quests.down.sql  006_quests.up.sql  007_chat.down.sql  007_chat.up.sql  008_behavior_signals.down.sql  008_behavior_signals.up.sql  009_seed_item_definitions.down.sql  009_seed_item_definitions.up.sql  010_mobs.down.sql  010_mobs.up.sql  011_quest_seed.down.sql  011_quest_seed.up.sql  013_indexer_state.up.sql  (+3 more)
programs/: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json  tsconfig.json
programs/programs/bridge/: Cargo.toml
programs/programs/bridge/src/: errors.rs  events.rs  lib.rs  state.rs
programs/programs/bridge/src/instructions/: admin.rs  deposit.rs  initialize.rs  mod.rs  withdraw.rs
(+125 files in other folders)
