[package]
name = "bridge"
version = "0.1.0"
description = "GRINDSET bridge — deposit/withdraw $GRIND between wallet and game treasury"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bridge"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token"] }
solana-program = "1.18"
